# lunar-birthday-calendar

./: Cargo.toml  birthdays.json  readme.md
.github/workflows/: binary.yml  build.disable.yml  build.yml
src/: calendar.rs  config.rs  main.rs
